plugins {
    id("java")
    id 'com.diffplug.spotless' version '7.2.1' apply false
}

repositories {
    mavenCentral()
}

ext['logback.version'] = '1.5.36'
//[Medium Severity][https://security.snyk.io/vuln/SNYK-JAVA-ORGAPACHETOMCATEMBED-17733895] in org.apache.tomcat.embed:tomcat-embed-core@11.0.22
//        introduced by org.apache.tomcat.embed:tomcat-embed-core@11.0.22
//        ✗ Always-Incorrect Control Flow Implementation (new) [Medium Severity][https://security.snyk.io/vuln/SNYK-JAVA-ORGAPACHETOMCATEMBED-17734715] in org.apache.tomcat.embed:tomcat-embed-core@11.0.22
//        introduced by org.apache.tomcat.embed:tomcat-embed-core@11.0.22
//        ✗ Always-Incorrect Control Flow Implementation (new) [Medium Severity][https://security.snyk.io/vuln/SNYK-JAVA-ORGAPACHETOMCATEMBED-17734718] in org.apache.tomcat.embed:tomcat-embed-core@11.0.22
//        introduced by org.apache.tomcat.embed:tomcat-embed-core@11.0.22
//        ✗ Improper Authentication (new) [High Severity][https://security.snyk.io/vuln/SNYK-JAVA-ORGAPACHETOMCATEMBED-17732890] in org.apache.tomcat.embed:tomcat-embed-core@11.0.22
//        introduced by org.apache.tomcat.embed:tomcat-embed-core@11.0.22
//        ✗ Detection of Error Condition Without Action (new) [High Severity][https://security.snyk.io/vuln/SNYK-JAVA-ORGAPACHETOMCATEMBED-17733746] in org.apache.tomcat.embed:tomcat-embed-core@11.0.22
//        introduced by org.apache.tomcat.embed:tomcat-embed-core@11.0.22
ext['tomcat.version'] = '11.0.23'

// ✗ Improperly Controlled Modification of Dynamically-Determined Object Attributes [Medium Severity][https://security.snyk.io/vuln/SNYK-JAVA-COMFASTERXMLJACKSONCORE-17457695] (CVE-2026-54515)
//        introduced by com.fasterxml.jackson.core:jackson-databind@2.21.4
// Note: this overrides the Jackson 2.x BOM only; the Jackson 3.x BOM is controlled by 'jackson-bom.version'.
ext['jackson-2-bom.version'] = '2.21.5'

// Upgrade managed Log4j 2 dependencies from 2.25.4 to 2.25.5 to fix
//  ✗ Improper Encoding or Escaping of Output (new) [Medium Severity][https://security.snyk.io/vuln/SNYK-JAVA-ORGAPACHELOGGINGLOG4J-17954276]
ext['log4j2.version'] = '2.25.5'
//Incorrect Authorization (new) [High Severity][https://security.snyk.io/vuln/SNYK-JAVA-TOOLSJACKSONCORE-17972609] in tools.jackson.core:jackson-databind@3.1.4
ext['jackson-bom.version'] = '3.1.5'
//  Upgrade io.netty:netty-codec-http@4.2.15.Final
//  ✗ Incorrect Authorization (new) [Medium Severity][https://security.snyk.io/vuln/SNYK-JAVA-IONETTY-18170206] in io.netty:netty-codec-http@4.2.15.Final
//  ✗ Allocation of Resources Without Limits or Throttling (new) [High Severity][https://security.snyk.io/vuln/SNYK-JAVA-IONETTY-18170202] in io.netty:netty-codec-http@4.2.15.Final
//  ✗ Allocation of Resources Without Limits or Throttling (new) [High Severity][https://security.snyk.io/vuln/SNYK-JAVA-IONETTY-18170213] in io.netty:netty-codec-http@4.2.15.Final
//  ✗ Allocation of Resources Without Limits or Throttling (new) [High Severity][https://security.snyk.io/vuln/SNYK-JAVA-IONETTY-18170204] in io.netty:netty-codec-http2@4.2.15.Final
//  ✗ Allocation of Resources Without Limits or Throttling (new) [High Severity][https://security.snyk.io/vuln/SNYK-JAVA-IONETTY-18170205] in io.netty:netty-codec-http3@4.2.15.Final
ext['netty.version'] = '4.2.16.Final'

def requiredJavaVersion = 25
def currentJavaVersion = JavaVersion.current().majorVersion.toInteger()

if (currentJavaVersion != requiredJavaVersion) {
    throw new GradleException(
            "This project requires Java ${requiredJavaVersion}. " +
                    "Current Java version is ${currentJavaVersion}. " +
                    "Please update your JAVA_HOME or use the correct JDK."
    )
}

configurations {
    jacocoAnt
}

dependencies {
    jacocoAnt "org.jacoco:org.jacoco.ant:0.8.15"
    runtimeOnly "javax.xml.bind:jaxb-api:2.3.1"
    compileOnly 'org.projectlombok:lombok:1.18.46'
    annotationProcessor 'org.projectlombok:lombok:1.18.46'
    testCompileOnly 'org.projectlombok:lombok:1.18.46'
    testAnnotationProcessor 'org.projectlombok:lombok:1.18.46'
}

subprojects {
    group = 'uk.gov.justice.laa.data.access'

    pluginManager.withPlugin('java') {
        java {
            toolchain {
                languageVersion = JavaLanguageVersion.of(25)
            }
        }

        apply plugin: 'com.diffplug.spotless'

        spotless {
            java {
                target 'src/*/java/**/*.java'
                importOrder()
                removeUnusedImports()
                cleanthat()
                googleJavaFormat('1.34.1')
            }
        }
    }

    afterEvaluate {
        if (plugins.hasPlugin('checkstyle')) {
            checkstyle {
                toolVersion = '10.26.1'
            }
        }
    }
}

allprojects {
    repositories {
        maven {
            name = "sonatypeSnapshots"
            url = uri('https://central.sonatype.com/repository/maven-snapshots/')
            mavenContent {
                snapshotsOnly()
            }
            content {
                includeGroup('uk.gov.justice.service.laa')
            }
        }
        mavenCentral()
    }
}

tasks.register('jacocoAggregatedReport', JacocoReport) {
    description = 'Generates JaCoCo report from data-access-service module'
    group = 'verification'

    dependsOn ':data-access-service:test', ':data-access-service:integrationTest'

    jacocoClasspath = configurations.jacocoAnt

    def serviceProject = project(':data-access-service')

    sourceDirectories = files("${serviceProject.projectDir}/src/main/java")

    classDirectories = fileTree(
            dir: "${serviceProject.buildDir}/classes/java/main",
            excludes: ['**/AccessApp.class', '**/generated/**', '**/config/**']
    )

    executionData = fileTree(
            dir: "${serviceProject.buildDir}/jacoco",
            includes: ["test.exec", "*.exec"]
    )

    reports {
        xml.required = true
        xml.outputLocation = layout.buildDirectory.file("reports/jacoco/aggregated.xml").get().asFile
        html.required = true
        html.outputLocation = layout.buildDirectory.dir("reports/jacoco/html").get().asFile
        csv.required = false
    }
}
tasks.withType(Test).configureEach {
    useJUnitPlatform()
}
